# bunite

./: .gitignore  package.json  tsconfig.json
examples/appres-demo/: package.json
examples/appres-demo/src/: about.html  index.html  main.ts
examples/basic/: bunite.config.ts  package.json  tsconfig.json
examples/basic/src/: main.ts
examples/basic/src/renderer/: index.html  index.ts  preload.js  tsconfig.json
examples/dnd-test/: package.json
examples/dnd-test/src/: main.ts
examples/dnd-test/src/renderer/: index.html
examples/dockview-browser/: package.json  tsconfig.json  vite.config.ts
examples/dockview-browser/src/: main.ts
examples/dockview-browser/src/renderer/: index.html  index.ts  maskHelper.ts  styles.css  tsconfig.json
examples/dockview-browser/src/renderer/public/: counter.html  form.html  list.html
examples/hello-bunite/: package.json
examples/hello-bunite/src/: index.html  main.ts
examples/ipc-smoke/: package.json  tsconfig.json
examples/ipc-smoke/scripts/: prepare-renderer.ts
examples/ipc-smoke/src/: main.ts  smoke.ts
examples/ipc-smoke/src/renderer/: index.html  index.ts  popup-target.html  preload.js  rpc-blocked.html  rpc-fail.html  rpc-ok.html
examples/multichannel-windows/: package.json  tsconfig.json
examples/multichannel-windows/src/: index.html  main.ts  renderer.ts  schema.ts
examples/multitab-browser/: .gitignore  package.json  tsconfig.json  vite.config.ts
examples/multitab-browser/src/: localServer.ts  main.ts
examples/multitab-browser/src/renderer/: about.html  global-ipc.html  index.html  index.ts  newtab.html  preload.js  shell.html  shell.ts  status.html  status.ts  styles.css  tsconfig.json
examples/multitab-browser/src/renderer/public/: newtab.html
examples/multitab-browser/src/res/: quit-dialog.html
examples/webview-surface/: package.json  tsconfig.json
examples/webview-surface/src/: index.html  main.ts  surface-a.html  surface-b.html
package/: CMakeLists.txt  package.json  tsconfig.json
package/src/bun/: index.ts
package/src/bun/core/: App.ts  BrowserView.ts  BrowserWindow.ts  Socket.ts  SurfaceBrowserIPC.ts  SurfaceManager.ts  SurfaceRegistry.ts  Utils.ts  windowIds.ts
package/src/bun/events/: appEvents.ts  event.ts  eventEmitter.ts  webviewEvents.ts  windowEvents.ts
package/src/bun/preload/: index.ts  inline.ts
package/src/bun/proc/: native.ts
package/src/native/shared/: callbacks.h  cef_response_filter.h  ffi_exports.h  log.h  webview_storage.h
package/src/native/win/: native_host.cpp  native_host_appres.cpp  native_host_cef.cpp  native_host_ffi.cpp  native_host_internal.h  native_host_runtime.cpp  native_host_utils.cpp  process_helper_win.cpp
package/src/preload/: runtime.ts  tsconfig.json  webviewElement.ts
package/src/shared/: cefVersion.ts  log.ts  paths.ts  platform.ts  rpc.ts  rpcDemux.ts  rpcWire.ts  rpcWireConstants.ts  webRpcHandler.ts  webSocketTransport.ts  webviewPolyfill.ts
package/src/types/: config.ts
package/src/view/: index.ts
tests/: rpc-demux.test.ts  view-import.test.ts  webSocketTransport.test.ts
tests/smoke/: package.json  tsconfig.json
tests/smoke/scripts/: build-renderer.ts
tests/smoke/src/: ipc.ts  run.ts  window.ts
tests/smoke/src/renderer/: index.html  index.ts  nav-blocked.html  nav-ok.html  tsconfig.json
tests/web-rpc/: web-rpc.test.ts
tools/bunite-dev/: package.json
tools/bunite-dev/scripts/: build.ts  gen-cef-version.ts  resolve.ts  setup-cef.ts
tools/bunite-native-win-x64/: package.json  sync.ts
